# News-verification-extension

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  Dockerfile.cpu  README.md  docker-compose.cpu.yml  docker-compose.yml  pyproject.toml  setup.sh
.aws/: task-definition.json
.github/workflows/: deploy.yml
APIs/: .env.example  haqq_graph.py  news_claim.py  requirements.txt
backend/: .env.example  __init__.py  main.py  pyproject.toml  requirements.deploy.txt  requirements.txt
backend/agent_pipeline/: agent_node.py  builder.py  state.py  tools.py
backend/api/: __init__.py  app.py  detect_media.py  playwright_utils.py  rate_limiter.py  routes.py  schemas.py
backend/core/: __init__.py  config.py  groq_key_rotator.py  preprocessing.py  state.py  text_processing.py
backend/graph/: __init__.py  builder.py
backend/models/: __init__.py  gend.py
backend/nodes/: __init__.py  classify.py  search.py  verify.py
backend/observability/: __init__.py  axiom_logger.py  langsmith_config.py  middleware.py
backend/search/: __init__.py  fetchers.py
backend/tests/: __init__.py  test_imports.py  test_medical.py  test_text_processing.py
extension/: manifest.json
extension/background/: config.example.js  service_worker.js
extension/content/: content.css  content.js
extension/popup/: popup.html  popup.js
haqq-v2/: manifest.json
haqq-v2/background/: service_worker.js
notebooks/: FineTune_classifier.ipynb  media_pipeline_calibration.ipynb  media_pipeline_eval.ipynb  media_pipeline_eval_yunet.ipynb  nb_cells.txt  parse_nb.py
(+8 files in other folders)
