[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "easyocr>=1.7.0",
    "fastapi>=0.115.0",
    "groq>=0.9.0",
    "httpx>=0.27.0",
    "langgraph>=0.1.0",
    "pillow>=10.0.0",
    "protobuf>=4.25.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "requests>=2.31.0",
    "sentencepiece>=0.2.0",
    "torch>=2.4.0",
    "transformers>=4.40.0",
    "uvicorn[standard]>=0.30.0",
    "yake>=0.7.3",
    "timm",
    "playwright>=1.61.0",
]

[dependency-groups]
dev = [
    "scikit-learn>=1.9.0",
]
